...
    case 'File Explorer':
      return l.browserFileExplorer;
    case 'Local Files':
      return l.browserLocalFiles;
    case 'Playlists':
      return l.browserPlaylists;
    case 'Albums':
      return l.browserAlbums;
    case 'Artists':
      return l.browserArtists;
    case 'Recent':
      return l.browserRecent;
    case 'Rated':
...
